--- a/.gitignore
+++ b/.gitignore
@@ -8,17 +8,7 @@ test.db
 test.sh
 
 ### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/workspace.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+.idea
 
 ### Eclipse ###
 .apt_generated
